--- a/index.html
+++ b/index.html
@@ -45,8 +45,11 @@
           <h1 class="display-4">Welcome To the Residential Management System</h1>
           <p class="lead">Once logged in, as a member of your residential community, you can submit maintence tickets and make payments.</p>
           <div class='position-relative'>
-            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-              Begin
+            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#regModal">
+              Register
+            </button>
+            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#signInModal">
+              Sign In
             </button>
           </div>
 
@@ -54,17 +57,18 @@
       </div>
 
 
-<!-- Register/Sign-in Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<!-- Register  -->
+
+ <div class="modal fade" id="regModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Register</h5>
+        <h5 class="modal-title" id="exampleModalLabel">Register for User Access</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
-      <div class="modal-body">
+      <div class="modal-body" id="#register-modal">
         <form>
           <div class="form-row">
             <div class="form-group col-md-6">
@@ -74,6 +78,7 @@
             <div class="form-group col-md-6">
               <label for="inputPassword4">Password</label>
               <input type="password" class="form-control" id="inputPassword4" placeholder="Password">
+              <input type="password_confirmation" class="form-control" id="inputPassword4" placeholder="Confirm Password">
             </div>
           </div>
           <div class="form-group">
@@ -93,8 +98,59 @@
               <label for="inputState">State</label>
               <select id="inputState" class="form-control">
                 <option selected>Choose...</option>
-                <option>...</option>
-              </select>
+                <option value="AL">Alabama</option>
+	               <option value="AK">Alaska</option>
+	                <option value="AZ">Arizona</option>
+	                 <option value="AR">Arkansas</option>
+	                  <option value="CA">California</option>
+	                   <option value="CO">Colorado</option>
+	                    <option value="CT">Connecticut</option>
+	                     <option value="DE">Delaware</option>
+	                      <option value="DC">District Of Columbia</option>
+	                       <option value="FL">Florida</option>
+	                        <option value="GA">Georgia</option>
+	                         <option value="HI">Hawaii</option>
+	                          <option value="ID">Idaho</option>
+	                           <option value="IL">Illinois</option>
+	                            <option value="IN">Indiana</option>
+	                             <option value="IA">Iowa</option>
+	                              <option value="KS">Kansas</option>
+	                               <option value="KY">Kentucky</option>
+	                                <option value="LA">Louisiana</option>
+	                                 <option value="ME">Maine</option>
+	                                  <option value="MD">Maryland</option>
+	                                   <option value="MA">Massachusetts</option>
+	                                    <option value="MI">Michigan</option>
+	                                     <option value="MN">Minnesota</option>
+	                                      <option value="MS">Mississippi</option>
+	                                       <option value="MO">Missouri</option>
+	                                        <option value="MT">Montana</option>
+	                                         <option value="NE">Nebraska</option>
+	                                          <option value="NV">Nevada</option>
+	                                           <option value="NH">New Hampshire</option>
+	                                            <option value="NJ">New Jersey</option>
+	                                             <option value="NM">New Mexico</option>
+	                                              <option value="NY">New York</option>
+	                                               <option value="NC">North Carolina</option>
+	                                                <option value="ND">North Dakota</option>
+	                                                 <option value="OH">Ohio</option>
+	                                                  <option value="OK">Oklahoma</option>
+	                                                   <option value="OR">Oregon</option>
+	                                                    <option value="PA">Pennsylvania</option>
+	                                                     <option value="RI">Rhode Island</option>
+	                                                      <option value="SC">South Carolina</option>
+	                                                       <option value="SD">South Dakota</option>
+	                                                        <option value="TN">Tennessee</option>
+	                                                         <option value="TX">Texas</option>
+	                                                          <option value="UT">Utah</option>
+	                                                           <option value="VT">Vermont</option>
+	                                                            <option value="VA">Virginia</option>
+	                                                             <option value="WA">Washington</option>
+	                                                              <option value="WV">West Virginia</option>
+	                                                               <option value="WI">Wisconsin</option>
+	                                                                <option value="WY">Wyoming</option>
+                                                                </select>
+
             </div>
             <div class="form-group col-md-2">
               <label for="inputZip">Zip</label>
@@ -103,14 +159,38 @@
           </div>
           <div class="form-group">
             <div class="form-check">
-            </div>
           </div>
             <button type="submit" class="btn btn-primary">Sign in</button>
+          </div
           </form>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
+        Version 1.0
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Sign In  -->
+
+<div class="modal fade" id="signInModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Sign-In</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <form>
+          <input type="text" placeholder="Enter E-mail">
+          <input type="password" placeholder="Enter Password">
+          <button type="submit" class="btn btn-primary">Sign-In</button>
+        </form>
+      </div>
+      <div class="modal-footer">
+        Version 1.0
       </div>
     </div>
   </div>
