added feature modals no logic

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       <!-- Do not add `script` tags-->
       <script src="public/vendor.js" type="text/javascript" charset="utf-8" defer></script>
       <script src="public/application.js" type="text/javascript" charset="utf-8" defer></script>
+      <script src="https://js.stripe.com/v3/"></script>
     </head>
     <body>
       <!--nav bar  -->
@@ -25,17 +26,19 @@
               <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Features</a>
+              <a class="nav-link" href="#">Change Password</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Pricing</a>
+              <a class="nav-link" href="#">View Maintenance Tickets</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#" id="logout"><em>Sign-out</em></a>
             </li>
           </ul>
-        <div id="alert" class="alert alert-secondary" role="alert">
-          Test Alert
-        </div>
+
     <span class="navbar-text">
-      You are logged in!
+      <div class="alert alert-secondary" role="alert" id="alert1">
+      </div>
     </span>
   </div>
 </nav>
@@ -43,8 +46,8 @@
       <div class="jumbotron jumbotron-fluid">
         <div class="container">
           <h1 class="display-4">Welcome To the Residential Management System</h1>
-          <p class="lead">Once logged in, as a member of your residential community, you can submit maintence tickets and make payments.</p>
-          <div class='position-relative'>
+          <p id="prelogMsg"class="lead">Once logged in, as a member of your residential community, you can submit maintence tickets and make payments.</p>
+          <div id="regSignButtons"class='position-relative'>
             <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#regModal">
               Register
             </button>
@@ -192,6 +195,95 @@
       <div class="modal-footer">
         <p id="signin-success"></p>
         Version 1.0
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Stripe payment -->
+
+
+<!-- Main View -->
+<div id='main-view' class="list-group" hidden>
+  <a href="#" class="list-group-item list-group-item-action center">
+    Make Rental or Mortgage Payment
+    <div id='stripe-payt-view'>
+      <form action="your-server-side-code" method="POST">
+                          <script
+                          src="https://checkout.stripe.com/checkout.js" class="stripe-button"
+                          data-key="pk_test_TYooMQauvdEDq54NiTphI7jx"
+                          data-name="Stripe.com"
+                          data-description="Thank you for shopping at Nozema!"
+                          data-image="https://stripe.com/img/documentation/checkout/marketplace.png"
+                          data-locale="auto"
+                          data-zip-code="true">
+                          </script>
+                        </form>
+    </div>
+  </a>
+  <button type="button" class="btn btn-secondary btn-lg btn-block" data-toggle="modal" data-target="#maintModal">Issue Maintenance Request</button>
+  <button type="button" class="btn btn-secondary btn-lg btn-block" data-toggle="modal" data-target="#mailModal">View Package Holds</button>
+  <button type="button" class="btn btn-secondary btn-lg btn-block" data-toggle="modal" data-target="#msgModal">Send Message to Management</button
+</div>
+
+<!-- Maintenance Request Modal -->
+<div class="modal fade" id="maintModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        ...
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- View Package Holds Modal -->
+<div class="modal fade" id="mailModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        ...
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Send Message to Mgt Modal -->
+<div class="modal fade" id="msgModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        ...
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
       </div>
     </div>
   </div>
