--- a/index.html
+++ b/index.html
@@ -257,19 +257,36 @@
 <div class="modal fade" id="maintModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
+      <form id="sendMaintTix">
       <div class="modal-header">
         <h5 class="modal-title" id="exampleModalLabel">Maintenance Request</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
-      <div class="modal-body">
-        ...
+      <div class="modal-body form-group">
+        <input name="subject" type="text" placeholder="subject">
+      <textarea id="maintMessage" name="description" class="form-control" placeholder="Enter a detailed description of the issue. If possible, upload a photo. Please allow 1 business day for a response." rows="4" required="required" data-error="Please, leave us a message."></textarea>
+
+          <div class="col-md-6">
+            <!-- <div class="form-group"> -->
+              <!-- <div class="input-group"> -->
+                <!-- <span class="input-group-btn"> -->
+                  <span class="btn btn-default btn-file">
+                      Browse… <input type="file" id="imgInp">
+                    </span>
+                  <!-- </span> -->
+                  <!-- <input type="text" readonly> -->
+                <!-- </div> -->
+                <img id='img-upload'/>
+              <!-- </div> -->
+            </div>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-        <button type="button" class="btn btn-primary">Submit Request</button>
+        <button type="submit" class="btn btn-primary">Submit Request</button>
       </div>
+    </form>
     </div>
   </div>
 </div>
@@ -298,20 +315,23 @@
 <div class="modal fade" id="msgModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
+      <form id="sendMsgToMgmt">
       <div class="modal-header">
         <h5 class="modal-title" id="exampleModalLabel">Send Message to Management</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
-      <div class="modal-body">
-        ...
+      <div class="modal-body form-group">
+        <input name="subject" type="text" placeholder="Subject">
+        <textarea id="mgtMessage" name="message" class="form-control" placeholder="Enter your message here then send. Please allow 1 business day for a response." rows="4" required="required" data-error="Please, leave us a message."></textarea>
       </div>
       <div class="modal-footer">
         <p id="msgConfirmation"></p>
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
         <button type="button" class="btn btn-primary">Send Message</button>
       </div>
+    </form>
     </div>
   </div>
 </div>
