--- a/index.html
+++ b/index.html
@@ -29,7 +29,14 @@
               <a class="nav-link" href="#" data-toggle="modal" data-target="#changePwModal">Change Password</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#" data-toggle="modal" data-target="#viewTixModal" id="viewMainTix">View Maintenance Tickets</a>
+              <div class="dropdown show">
+                <a class="btn btn-light dropdown toggle" href="#" role="button" id="viewMainTix" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">View Maintenance Tickets</a>
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                  <a class="dropdown-item" href="#">Action</a>
+                  <a class="dropdown-item" href="#">Another action</a>
+                  <a class="dropdown-item" href="#">Something else here</a>
+                </div>
+            </div>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#" id="logout"><em>Sign-out</em></a>
@@ -348,9 +355,9 @@
         </button>
       </div>
       <div class="modal-body">
-        <button class="btn btn-secondary" type="button" id="launchTixIndex">Show All Tickets</button>
-        <button class="btn btn-secondary" type="button" id="launchTixShow">Find One Ticket</button>
-        <button class="btn btn-secondary" type="button" id="launchTixDelete">Delete A Ticket</button>
+        <button class="btn btn-secondary" type="button" id="launchTixIndex" data-toggle="button" data-target="#ticketIndexContainer" aria-hidden="true" aria-pressed="false">Show All Tickets</button>
+        <button class="btn btn-secondary" type="button" id="launchTixShow" data-toggle="button" aria-pressed="false">Find One Ticket</button>
+        <button class="btn btn-secondary" type="button" id="launchTixDelete" data-toggle="button" aria-pressed="false">Delete A Ticket</button>
         <div class="container" id="ticketShowContainer" hidden>
           Ticket Show Test
         </div>
