--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
             </li>
             <li class="nav-item">
               <div class="dropdown show">
-                <a class="btn btn-light dropdown toggle" href="#" role="button" id="viewMainTix" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">View Maintenance Tickets</a>
+                <a class="btn btn-light dropdown toggle" href="#" role="button"  data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">View Maintenance Tickets</a>
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                  <a class="dropdown-item" href="#">Action</a>
-                  <a class="dropdown-item" href="#">Another action</a>
-                  <a class="dropdown-item" href="#">Something else here</a>
+                  <a class="dropdown-item" href="#" data-toggle="modal" id="viewMainTix" data-target="#viewTixModal">Show All Tickets</a>
+                  <a class="dropdown-item" href="#" data-toggle="modal" id="showTix" data-target="#showTixModal">Show/Edit A Ticket</a>
+                  <a class="dropdown-item" href="#" data-toggle="modal" id="delTix" data-target="#delTixModal">Delete A Ticket</a>
                 </div>
             </div>
             </li>
@@ -343,25 +343,19 @@
   </div>
 </div>
 
-<!-- View Maintenance Tickets -->
+<!-- View Maintenance Tickets Index -->
 
 <div class="modal fade" id="viewTixModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Maintenance Tickets</h5>
+        <h5 class="modal-title" id="exampleModalLabel">View All Maintenance Tickets</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
       <div class="modal-body">
-        <button class="btn btn-secondary" type="button" id="launchTixIndex" data-toggle="button" data-target="#ticketIndexContainer" aria-hidden="true" aria-pressed="false">Show All Tickets</button>
-        <button class="btn btn-secondary" type="button" id="launchTixShow" data-toggle="button" aria-pressed="false">Find One Ticket</button>
-        <button class="btn btn-secondary" type="button" id="launchTixDelete" data-toggle="button" aria-pressed="false">Delete A Ticket</button>
-        <div class="container" id="ticketShowContainer" hidden>
-          Ticket Show Test
-        </div>
-        <div class="container" id="ticketIndexContainer" hidden>
+        <div class="container" id="ticketIndexContainer">
           <div class="row">
             <div class="col">Tickets</div>
             <div class="col">Resolved?</div>
@@ -370,8 +364,56 @@
             <div class="col" id="ticketResolvedResponse"></div>
           </div>
         </div>
-        <div class="container" id="ticketDeleteContainer" hidden>
-          Delete Test
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Show/Edit Maintenance Ticekt  -->
+<div class="modal fade" id="showTixModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Find and/or Edit a Maintenance Ticket</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <p> Search a previous maintenance request and edit it</p>
+        <form class="form-inline">
+          <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Delete A Maintenance Ticket -->
+<div class="modal fade" id="delTixModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Delete A Maintenance Request</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <p> Search a previous maintenance request and delete it</p>
+        <form class="form-inline">
+          <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+          </form>
+        <div class="container" id="ticketIndexContainer">
+          delete a ticket test
         </div>
       </div>
       <div class="modal-footer">
