delete successfully working

--- a/index.html
+++ b/index.html
@@ -431,11 +431,10 @@
       <div class="modal-body">
         <p> Search a previous maintenance request and delete it</p>
         <form class="form-inline" id="delTixFormSearch">
-          <input  class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+          <input  name="id" class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
           <button class="btn btn-outline-danger my-2 my-sm-0" type="submit">Search</button>
           </form>
-        <div class="container" id="delSearchContainer" hidden>
-          delete a ticket test
+        <div class="container" id="delResult">
         </div>
       </div>
       <div class="modal-footer">
