--- a/index.html
+++ b/index.html
@@ -329,14 +329,15 @@
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
-      <div class="modal-body form-group">
+      <div class="modal-body form-group" id="msgToMgmtContainer">
         <input name="subject" type="text" placeholder="Subject">
         <textarea id="mgtMessage" name="message" class="form-control" placeholder="Enter your message here then send. Please allow 1 business day for a response." rows="4" required="required" data-error="Please, leave us a message."></textarea>
       </div>
+      <p id="msgConfirmation"></p>
       <div class="modal-footer">
-        <p id="msgConfirmation"></p>
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-        <button type="button" class="btn btn-primary">Send Message</button>
+        <button type="button" class="btn btn-secondary" data-dismiss="modal" id="cancelBtnHide">Cancel</button>
+        <button type="submit" class="btn btn-primary" id="sendBtnHide">Send Message</button>
+        <button type="button" class="btn btn-secondary" data-dismiss="modal" id="closeBtnShow" hidden>Close</button>
       </div>
     </form>
     </div>
