--- a/index.html
+++ b/index.html
@@ -356,14 +356,36 @@
         </button>
       </div>
       <div class="modal-body">
-        <div class="container" id="ticketIndexContainer">
-          <div class="row">
-            <div class="col">Tickets</div>
-            <div class="col">Resolved?</div>
-            <div class="w-100"></div>
-            <div class="col" id="ticketIndexResponse"></div>
-            <div class="col" id="ticketResolvedResponse"></div>
-          </div>
+        <table class="table-responsive">
+          <thead>
+            <tr>
+              <th scope="col">#</th>
+              <th scope="col">Subject</th>
+              <th scope="col">Description</th>
+              <th scope="col">Resolved?</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <th scope="row"></th>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+            <tr>
+              <th scope="row"></th>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+            <tr>
+              <th scope="row"></th>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+          </tbody>
+        </table>
         </div>
       </div>
       <div class="modal-footer">
