--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
               <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#" data-toggle="modal" data-target="#changePwModal">Change Password</a>
+              <a class="nav-link" href="#" data-toggle="modal" data-target="#changePwModal"><i class="fas fa-key"></i>Change Password</a>
             </li>
             <li class="nav-item">
               <div class="dropdown show">
-                <a class="btn btn-light dropdown toggle" href="#" role="button"  data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">View Maintenance Tickets</a>
+                <a class="btn btn-light dropdown toggle" href="#" role="button"  data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fas fa-receipt"></i>View Maintenance Tickets</a>
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
                   <a class="dropdown-item" href="#" data-toggle="modal" id="viewMainTix" data-target="#viewTixModal">Show All Tickets</a>
                   <a class="dropdown-item" href="#" data-toggle="modal" id="showTix" data-target="#showTixModal">Show/Edit A Ticket</a>
@@ -44,8 +44,7 @@
           </ul>
 
     <span class="navbar-text">
-      <div class="alert alert-secondary" role="alert" id="alert1">
-      </div>
+      <div class="alert alert-light" role="alert" id="alert1"></div>
     </span>
   </div>
 </nav>
@@ -65,7 +64,7 @@
 
         </div>
       </div>
-
+      <div class="alert alert-light text-center" role="alert" id="alert2"></div>
 
 <!-- Register  -->
 
@@ -174,6 +173,8 @@
           </div>
           </form>
       </div>
+      <p id="reg-success" class=></p>
+      <button id="regCloseBtnShow" type="button" class="btn btn-primary" data-dismiss="modal" aria-label="Close" hidden>Close</button>
       <div class="modal-footer">
         Version 1.0
       </div>
@@ -226,7 +227,7 @@
         </form>
       </div>
       <div class="modal-footer">
-        <p id="pwChg-success"></p>
+        <p id="pwChg-success" class="text-center"></p>
       </div>
     </div>
   </div>
@@ -272,28 +273,29 @@
         </button>
       </div>
       <div class="modal-body form-group">
-        <input name="subject" type="text" placeholder="subject">
-      <textarea id="maintMessage" name="description" class="form-control" placeholder="Enter a detailed description of the issue. If possible, upload a photo. Please allow 1 business day for a response." rows="4" required="required" data-error="Please, leave us a message."></textarea>
+        Subject: <input name="subject" type="text" placeholder=""> <br>
+        Description: <textarea id="maintMessage" name="description" class="form-control" placeholder="Enter a detailed description of the issue. If possible, upload a photo. Please allow 1 business day for a response." rows="4" required="required" data-error="Please, leave us a message."></textarea>
 
-          <div class="col-md-6">
+          <!-- <div class="col-md-6">
             <!-- <div class="form-group"> -->
               <!-- <div class="input-group"> -->
                 <!-- <span class="input-group-btn"> -->
-                  <span class="btn btn-default btn-file">
+                  <!-- <span class="btn btn-default btn-file">
                       Browse… <input type="file" id="imgInp">
-                    </span>
+                    </span> -->
                   <!-- </span> -->
                   <!-- <input type="text" readonly> -->
                 <!-- </div> -->
-                <img id='img-upload'/>
+                <!-- <img id='img-upload'/> -->
               <!-- </div> -->
-            </div>
+            <!-- </div> -->
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
         <button type="submit" class="btn btn-primary">Submit Request</button>
       </div>
     </form>
+    <p id="alert3" class="text-center"></p>
     </div>
   </div>
 </div>
