--- a/index.html
+++ b/index.html
@@ -276,6 +276,15 @@
   <button type="button" class="btn btn-secondary btn-lg btn-block" data-toggle="modal" data-target="#mailModal">View Package Holds</button>
   <button type="button" class="btn btn-secondary btn-lg btn-block" data-toggle="modal" data-target="#msgModal">Send Message to Management</button>
 </div>
+<!-- weather api -->
+<!-- <div class="col">
+  <div class="card">
+    <div class="card-body">
+      <p class="card-text">Weather</p>
+      <div id="weather"></div>
+  </div>
+</div>
+</div> -->
 </div>
 
 <!-- Maintenance Request Modal -->
