--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
         <p> Search a previous maintenance request and edit it</p>
         <form class="form-inline" id="showEditTixForm">
           Enter ID #: <input Name="id" class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-dark my-2 my-sm-0" type="submit">Search</button>
+          <button class="btn btn-info my-2 my-sm-0" type="submit">Search</button>
         </form>
         <p id="searchMsg"></p>
         <form id="searchResults" hidden>
@@ -442,7 +442,7 @@
                 </div>
           </div>
 
-          <button class="btn btn-outline-dark my-2 my-sm-0" type="submit" id="editTix">Edit</button>
+          <button class="btn btn-info my-2 my-sm-0" type="submit" id="editTix">Edit</button>
         </form>
         <p id="editUiMsg"></p>
       </div>
@@ -478,12 +478,13 @@
     </div>
   </div>
 </div>
+<footer class="bg-black small text-center text-black-50">
+  <div class="container">
+    Copyright &copy; Michael Rai 2019
+  </div>
+</footer>
 
 
     </body>
-    <footer class="bg-black small text-center text-black-50">
-      <div class="container">
-        Copyright &copy; Michael Rai 2019
-      </div>
-    </footer>
+
 </html>
