Began work on weather api
succesfully retreived info must work on output

--- a/index.html
+++ b/index.html
@@ -277,14 +277,17 @@
   <button type="button" class="btn btn-secondary btn-lg btn-block" data-toggle="modal" data-target="#msgModal">Send Message to Management</button>
 </div>
 <!-- weather api -->
-<!-- <div class="col">
+<div class="col">
   <div class="card">
     <div class="card-body">
       <p class="card-text">Weather</p>
-      <div id="weather"></div>
+      <div id="description"></div>
+      <div id="temp"></div>
+      <div id="humidity"></div>
+      <div id="city"></div>
   </div>
 </div>
-</div> -->
+</div>
 </div>
 
 <!-- Maintenance Request Modal -->
