--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
   <button type="button" class="btn btn-secondary btn-lg btn-block" data-toggle="modal" data-target="#mailModal">View Package Holds</button>
   <button type="button" class="btn btn-secondary btn-lg btn-block" data-toggle="modal" data-target="#msgModal">Send Message to Management</button>
 </div>
-<!-- weather api -->
+<!-- weather api
 <div class="col">
   <div class="card">
     <div class="card-body">
@@ -287,7 +287,7 @@
       <div id="city"></div>
   </div>
 </div>
-</div>
+</div> -->
 </div>
 
 <!-- Maintenance Request Modal -->
